// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Color variants generator should generate correct color modulations with custom contrast and hueOffset values 1`] = `
Object {
  "100": "#fff9e5",
  "1000": "#000",
  "200": "#fc9",
  "300": "#ff794d",
  "400": "#ff0000",
  "50": "#fff",
  "500": "#b3002d",
  "600": "#603",
  "700": "#1a0013",
  "800": "#000",
  "900": "#000",
}
`;

exports[`Color variants generator should generate correct color modulations with custom contrast value 1`] = `
Object {
  "100": "#ffe5e5",
  "1000": "#000",
  "200": "#f99",
  "300": "#ff4d4d",
  "400": "#ff0000",
  "50": "#fff",
  "500": "#b30000",
  "600": "#600",
  "700": "#1a0000",
  "800": "#000",
  "900": "#000",
}
`;

exports[`Color variants generator should generate correct color modulations with custom hueOffset value 1`] = `
Object {
  "100": "#ffe599",
  "1000": "#000",
  "200": "#ffb366",
  "300": "#f63",
  "400": "#ff0000",
  "50": "#ffc",
  "500": "#c03",
  "600": "#99004d",
  "700": "#66004c",
  "800": "#303",
  "900": "#000",
}
`;

exports[`Color variants generator should generate correct color modulations with default params 1`] = `
Object {
  "100": "#f99",
  "1000": "#000",
  "200": "#f66",
  "300": "#f33",
  "400": "#ff0000",
  "50": "#fcc",
  "500": "#c00",
  "600": "#900",
  "700": "#600",
  "800": "#300",
  "900": "#000",
}
`;

exports[`Generate primitives should generate a primitives object based on custom theme config 1`] = `
Object {
  "black": "#000",
  "mono100": "#FFFFFF",
  "mono1000": "#000000",
  "mono200": "#F7F7F7",
  "mono300": "#F0F0F0",
  "mono400": "#E5E5E5",
  "mono50": "#fff",
  "mono500": "#CCCCCC",
  "mono600": "#B3B3B3",
  "mono700": "#999999",
  "mono800": "#666666",
  "mono900": "#333333",
  "negative": "#E54937",
  "negative100": "#FADBD7",
  "negative1000": "#000",
  "negative200": "#F4AFA7",
  "negative300": "#EB7567",
  "negative400": "#E54937",
  "negative50": "#FDF0EF",
  "negative500": "#AE372A",
  "negative600": "#892C21",
  "negative700": "#5C1D16",
  "negative800": "#471009",
  "negative900": "#1a0603",
  "positive": "#07A35A",
  "positive100": "#CDEDDE",
  "positive1000": "#000",
  "positive200": "#88D3B0",
  "positive300": "#43B982",
  "positive400": "#07A35A",
  "positive50": "#EBF8F2",
  "positive500": "#057C44",
  "positive600": "#046236",
  "positive700": "#034124",
  "positive800": "#000",
  "positive900": "#000",
  "primary": "#f00",
  "primary100": "#f99",
  "primary1000": "#000",
  "primary200": "#f66",
  "primary300": "#f33",
  "primary400": "#f00",
  "primary50": "#fcc",
  "primary500": "#c00",
  "primary600": "#900",
  "primary700": "#600",
  "primary800": "#300",
  "primary900": "#000",
  "primaryFontFamily": "system-ui, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
  "rating": "#FFC043",
  "rating100": "#fff3dc",
  "rating1000": "#100b00",
  "rating200": "#FFE1A5",
  "rating300": "#ffd176",
  "rating400": "#FFC043",
  "rating50": "#fff",
  "rating500": "#ffaf10",
  "rating600": "#dc9200",
  "rating700": "#a97000",
  "rating800": "#764e00",
  "rating900": "#432d00",
  "type": "light",
  "warning": "#ED6F0E",
  "warning100": "#FBE2CF",
  "warning1000": "#000",
  "warning200": "#F6BA8B",
  "warning300": "#F19248",
  "warning400": "#ED6F0E",
  "warning50": "#FEF3EC",
  "warning500": "#B4540B",
  "warning600": "#8E4308",
  "warning700": "#5F2C06",
  "warning800": "#2c1503",
  "warning900": "#000",
  "white": "#fff",
}
`;

exports[`Generate primitives should generate a primitives object based on custom theme config 2`] = `
Object {
  "black": "#000",
  "mono100": "#FFFFFF",
  "mono1000": "#000000",
  "mono200": "#F7F7F7",
  "mono300": "#F0F0F0",
  "mono400": "#E5E5E5",
  "mono50": "#fff",
  "mono500": "#CCCCCC",
  "mono600": "#B3B3B3",
  "mono700": "#999999",
  "mono800": "#666666",
  "mono900": "#333333",
  "negative": "#E54937",
  "negative100": "#FADBD7",
  "negative1000": "#000",
  "negative200": "#F4AFA7",
  "negative300": "#EB7567",
  "negative400": "#E54937",
  "negative50": "#FDF0EF",
  "negative500": "#AE372A",
  "negative600": "#892C21",
  "negative700": "#5C1D16",
  "negative800": "#471009",
  "negative900": "#1a0603",
  "positive": "#07A35A",
  "positive100": "#CDEDDE",
  "positive1000": "#000",
  "positive200": "#88D3B0",
  "positive300": "#43B982",
  "positive400": "#07A35A",
  "positive50": "#EBF8F2",
  "positive500": "#057C44",
  "positive600": "#046236",
  "positive700": "#034124",
  "positive800": "#000",
  "positive900": "#000",
  "primary": "red",
  "primary100": "#f99",
  "primary1000": "#000",
  "primary200": "#f66",
  "primary300": "#f33",
  "primary400": "red",
  "primary50": "#fcc",
  "primary500": "#c00",
  "primary600": "#900",
  "primary700": "#600",
  "primary800": "#300",
  "primary900": "#000",
  "primaryFontFamily": "system-ui, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
  "rating": "#FFC043",
  "rating100": "#fff3dc",
  "rating1000": "#100b00",
  "rating200": "#FFE1A5",
  "rating300": "#ffd176",
  "rating400": "#FFC043",
  "rating50": "#fff",
  "rating500": "#ffaf10",
  "rating600": "#dc9200",
  "rating700": "#a97000",
  "rating800": "#764e00",
  "rating900": "#432d00",
  "type": "light",
  "warning": "#ED6F0E",
  "warning100": "#FBE2CF",
  "warning1000": "#000",
  "warning200": "#F6BA8B",
  "warning300": "#F19248",
  "warning400": "#ED6F0E",
  "warning50": "#FEF3EC",
  "warning500": "#B4540B",
  "warning600": "#8E4308",
  "warning700": "#5F2C06",
  "warning800": "#2c1503",
  "warning900": "#000",
  "white": "#fff",
}
`;

exports[`Generate primitives should generate default light primitives if no or empty config was provided 1`] = `
Object {
  "black": "#000",
  "mono100": "#FFFFFF",
  "mono1000": "#000000",
  "mono200": "#F7F7F7",
  "mono300": "#F0F0F0",
  "mono400": "#E5E5E5",
  "mono50": "#fff",
  "mono500": "#CCCCCC",
  "mono600": "#B3B3B3",
  "mono700": "#999999",
  "mono800": "#666666",
  "mono900": "#333333",
  "negative": "#E54937",
  "negative100": "#FADBD7",
  "negative1000": "#000",
  "negative200": "#F4AFA7",
  "negative300": "#EB7567",
  "negative400": "#E54937",
  "negative50": "#FDF0EF",
  "negative500": "#AE372A",
  "negative600": "#892C21",
  "negative700": "#5C1D16",
  "negative800": "#471009",
  "negative900": "#1a0603",
  "positive": "#07A35A",
  "positive100": "#CDEDDE",
  "positive1000": "#000",
  "positive200": "#88D3B0",
  "positive300": "#43B982",
  "positive400": "#07A35A",
  "positive50": "#EBF8F2",
  "positive500": "#057C44",
  "positive600": "#046236",
  "positive700": "#034124",
  "positive800": "#000",
  "positive900": "#000",
  "primary": "#276EF1",
  "primary100": "#D2E0FC",
  "primary1000": "#000",
  "primary200": "#9CBCF8",
  "primary300": "#548BF4",
  "primary400": "#276EF1",
  "primary50": "#EDF3FE",
  "primary500": "#174EB6",
  "primary600": "#123D90",
  "primary700": "#0C2960",
  "primary800": "#051c47",
  "primary900": "#020917",
  "primaryFontFamily": "system-ui, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
  "rating": "#FFC043",
  "rating100": "#fff3dc",
  "rating1000": "#100b00",
  "rating200": "#FFE1A5",
  "rating300": "#ffd176",
  "rating400": "#FFC043",
  "rating50": "#fff",
  "rating500": "#ffaf10",
  "rating600": "#dc9200",
  "rating700": "#a97000",
  "rating800": "#764e00",
  "rating900": "#432d00",
  "type": "light",
  "warning": "#ED6F0E",
  "warning100": "#FBE2CF",
  "warning1000": "#000",
  "warning200": "#F6BA8B",
  "warning300": "#F19248",
  "warning400": "#ED6F0E",
  "warning50": "#FEF3EC",
  "warning500": "#B4540B",
  "warning600": "#8E4308",
  "warning700": "#5F2C06",
  "warning800": "#2c1503",
  "warning900": "#000",
  "white": "#fff",
}
`;

exports[`Generate primitives should generate default light primitives if no or empty config was provided 2`] = `
Object {
  "black": "#000",
  "mono100": "#FFFFFF",
  "mono1000": "#000000",
  "mono200": "#F7F7F7",
  "mono300": "#F0F0F0",
  "mono400": "#E5E5E5",
  "mono50": "#fff",
  "mono500": "#CCCCCC",
  "mono600": "#B3B3B3",
  "mono700": "#999999",
  "mono800": "#666666",
  "mono900": "#333333",
  "negative": "#E54937",
  "negative100": "#FADBD7",
  "negative1000": "#000",
  "negative200": "#F4AFA7",
  "negative300": "#EB7567",
  "negative400": "#E54937",
  "negative50": "#FDF0EF",
  "negative500": "#AE372A",
  "negative600": "#892C21",
  "negative700": "#5C1D16",
  "negative800": "#471009",
  "negative900": "#1a0603",
  "positive": "#07A35A",
  "positive100": "#CDEDDE",
  "positive1000": "#000",
  "positive200": "#88D3B0",
  "positive300": "#43B982",
  "positive400": "#07A35A",
  "positive50": "#EBF8F2",
  "positive500": "#057C44",
  "positive600": "#046236",
  "positive700": "#034124",
  "positive800": "#000",
  "positive900": "#000",
  "primary": "#276EF1",
  "primary100": "#D2E0FC",
  "primary1000": "#000",
  "primary200": "#9CBCF8",
  "primary300": "#548BF4",
  "primary400": "#276EF1",
  "primary50": "#EDF3FE",
  "primary500": "#174EB6",
  "primary600": "#123D90",
  "primary700": "#0C2960",
  "primary800": "#051c47",
  "primary900": "#020917",
  "primaryFontFamily": "system-ui, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
  "rating": "#FFC043",
  "rating100": "#fff3dc",
  "rating1000": "#100b00",
  "rating200": "#FFE1A5",
  "rating300": "#ffd176",
  "rating400": "#FFC043",
  "rating50": "#fff",
  "rating500": "#ffaf10",
  "rating600": "#dc9200",
  "rating700": "#a97000",
  "rating800": "#764e00",
  "rating900": "#432d00",
  "type": "light",
  "warning": "#ED6F0E",
  "warning100": "#FBE2CF",
  "warning1000": "#000",
  "warning200": "#F6BA8B",
  "warning300": "#F19248",
  "warning400": "#ED6F0E",
  "warning50": "#FEF3EC",
  "warning500": "#B4540B",
  "warning600": "#8E4308",
  "warning700": "#5F2C06",
  "warning800": "#2c1503",
  "warning900": "#000",
  "white": "#fff",
}
`;

exports[`Generate primitives should preserve explicitly defined color varians in a generated primitives object 1`] = `
Object {
  "black": "#000",
  "mono100": "#FFFFFF",
  "mono1000": "#000000",
  "mono200": "#F7F7F7",
  "mono300": "#F0F0F0",
  "mono400": "#E5E5E5",
  "mono50": "#fff",
  "mono500": "#CCCCCC",
  "mono600": "#B3B3B3",
  "mono700": "#999999",
  "mono800": "#666666",
  "mono900": "#333333",
  "negative": "#E54937",
  "negative100": "#FADBD7",
  "negative1000": "#000",
  "negative200": "#F4AFA7",
  "negative300": "#EB7567",
  "negative400": "#E54937",
  "negative50": "#FDF0EF",
  "negative500": "#AE372A",
  "negative600": "#892C21",
  "negative700": "#5C1D16",
  "negative800": "#471009",
  "negative900": "#1a0603",
  "positive": "#07A35A",
  "positive100": "#CDEDDE",
  "positive1000": "#000",
  "positive200": "#88D3B0",
  "positive300": "#43B982",
  "positive400": "#07A35A",
  "positive50": "#EBF8F2",
  "positive500": "#057C44",
  "positive600": "#046236",
  "positive700": "#034124",
  "positive800": "#000",
  "positive900": "#000",
  "primary": "red",
  "primary100": "#f99",
  "primary1000": "#000",
  "primary200": "#f66",
  "primary300": "#f33",
  "primary400": "red",
  "primary50": "#fcc",
  "primary500": "green",
  "primary600": "#900",
  "primary700": "#600",
  "primary800": "#300",
  "primary900": "#000",
  "primaryFontFamily": "system-ui, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
  "rating": "#FFC043",
  "rating100": "#fff3dc",
  "rating1000": "#100b00",
  "rating200": "#FFE1A5",
  "rating300": "#ffd176",
  "rating400": "#FFC043",
  "rating50": "#fff",
  "rating500": "#ffaf10",
  "rating600": "#dc9200",
  "rating700": "#a97000",
  "rating800": "#764e00",
  "rating900": "#432d00",
  "type": "light",
  "warning": "#ED6F0E",
  "warning100": "#FBE2CF",
  "warning1000": "#000",
  "warning200": "#F6BA8B",
  "warning300": "#F19248",
  "warning400": "#ED6F0E",
  "warning50": "#FEF3EC",
  "warning500": "#B4540B",
  "warning600": "#8E4308",
  "warning700": "#5F2C06",
  "warning800": "#2c1503",
  "warning900": "#000",
  "white": "#fff",
}
`;
